adicionando menu ao home
Signed-off-by: ygorlino <ygorlino11@gmail.com>

--- a/base_portal/home.html
+++ b/base_portal/home.html
@@ -12,12 +12,13 @@
     <header>
         <div id="principal">
             <header class="topo">
-                <nav>
+                <nav class="nav-topo">
                     <ul>
-                        <li><a href="home.html">Inicio</a></li>
-                        <li><a href="#">Historia</a></li>
-                        <li><a href="#">Galeria</a></li>
-                        <li><a href="#">Elenco</a></li>
+                        <li><a class="btn-inicio" href="home.html">Inicio</a></li>
+                        <li><a class="btn-inicio" href="#">Historia</a></li>
+                        <li><a class="btn-inicio" href="#">Galeria</a></li>
+                        <li><a class="btn-inicio" href="#">Elenco</a></li>
+                        <li><a class="btn-inicio" href="#">Artilharia</a></li>
                     </ul>
                 </nav>
                     <div class="topo-conteudo">
@@ -25,47 +26,44 @@
                             Portal Lotus FC
                             destinado ao clube amador de FUT7
                         </h1>
-                        <p>
-                            Artilharia
-                        </p>
                     </div>
             </header>
+        </div>
     </header>
-    <div>
-            <section class="slider"> 
-                <div class="slider-content"> 
-                    <input type="radio" name="btn-radio" id="radio1">
-                    <input type="radio" name="btn-radio" id="radio2">
-                    <input type="radio" name="btn-radio" id="radio3">  
-                    <div class="slide-box primeiro">
-                        <h1>Próximas partidas</h1>
-                        <p class="text-banner">11/04/2023 20h:00</p>
-                        <img src="imagens/bayern-munchen-logo-68D0CB94C3-seeklogo.com.png" height="50" width="50"> x <img src="imagens/WhatsApp Image 2023-04-11 at 08.03.59.jpeg" height="50" width="50">
-                        <h4>Lóstus de Munique x Ebenezer</h4>
-                        <p class="text-banner">Maceió - Arena Total Giro</p>
-                    </div>
-                    <div class="slide-box">
-                        <h1>Próximas partidas</h1>
-                        <p class="text-banner">20/04/2023 21h:00</p>
-                        <img src="imagens/bayern-munchen-logo-68D0CB94C3-seeklogo.com.png" height="50" width="50"> x <img src="imagens/i.png" height="50" width="50">
-                        <h4>Lóstus de Munique x Torino SD</h4>
-                        <p class="text-banner">Maceió - Arena Total Giro</p>
-                    </div>
-                    <div class="slide-box">
-                        <h1>Próximas partidas</h1>
-                        <p class="text-banner">06/05/2023 22h:00</p>
-                        <img src="imagens/bayern-munchen-logo-68D0CB94C3-seeklogo.com.png" height="50" width="50"> x <img src="imagens/FCBarcelona.svg.png" height="50" width="50">
-                        <h4>Lóstus de Munique x Barcelot</h4>
-                        <p class="text-banner">Maceió - Arena Total Giro</p>
-                    </div>
+    <div class="main">    
+        <section class="slider"> 
+            <div class="slider-content"> 
+                <input type="radio" name="btn-radio" id="radio1">
+                <input type="radio" name="btn-radio" id="radio2">
+                <input type="radio" name="btn-radio" id="radio3">  
+                <div class="slide-box primeiro">
+                    <h1>Próximas partidas</h1>
+                    <p class="text-banner">11/04/2023 20h:00</p>
+                    <img src="imagens/bayern-munchen-logo-68D0CB94C3-seeklogo.com.png" height="50" width="50"> x <img src="imagens/WhatsApp Image 2023-04-11 at 08.03.59.jpeg" height="50" width="50">
+                    <h4>Lóstus de Munique x Ebenezer</h4>
+                    <p class="text-banner">Maceió - Arena Total Giro</p>
                 </div>
-                <div class="nav-manual">
-                    <label for="radio1" class="manual-btn"></label>
-                    <label for="radio2" class="manual-btn"></label>
-                    <label for="radio3" class="manual-btn"></label>
+                <div class="slide-box">
+                    <h1>Próximas partidas</h1>
+                    <p class="text-banner">20/04/2023 21h:00</p>
+                    <img src="imagens/bayern-munchen-logo-68D0CB94C3-seeklogo.com.png" height="50" width="50"> x <img src="imagens/i.png" height="50" width="50">
+                    <h4>Lóstus de Munique x Torino SD</h4>
+                    <p class="text-banner">Maceió - Arena Total Giro</p>
                 </div>
-            </section>
-            
+                <div class="slide-box">
+                    <h1>Próximas partidas</h1>
+                    <p class="text-banner">06/05/2023 22h:00</p>
+                    <img src="imagens/bayern-munchen-logo-68D0CB94C3-seeklogo.com.png" height="50" width="50"> x <img src="imagens/FCBarcelona.svg.png" height="50" width="50">
+                    <h4>Lóstus de Munique x Barcelot</h4>
+                    <p class="text-banner">Maceió - Arena Total Giro</p>
+                </div>
+            </div>
+        </section>
+    </div>
+    <div class="nav-manual">
+        <label for="radio1" class="manual-btn"></label>
+        <label for="radio2" class="manual-btn"></label>
+        <label for="radio3" class="manual-btn"></label>
     </div>
 </body>
 </html>
